--- a/templates/commentaire/new.html.twig
+++ b/templates/commentaire/new.html.twig
@@ -18,7 +18,7 @@
 <div class="container col-sm-10 col-md-8 col-lg-6">
     {{ include('commentaire/_form.html.twig') }}
 
-    <a class="btn btn-md btn-primary bouton_retour button_CreerDiscussion button-retour" href="{{ path('commentaire_index') }}">back to list</a>
+    <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position pb_margin"><a href="{{ path('commentaire_index') }}">Retour</a></button>
     </div>
 </div>
 
