--- a/templates/discussion/new.html.twig
+++ b/templates/discussion/new.html.twig
@@ -18,7 +18,7 @@
   <div class="container col-sm-10 col-md-8 col-lg-6">
   {{ include('discussion/_form.html.twig') }}
 
-  <a class="btn btn-primary bouton_retour" href="{{ path('discussion_index') }}">Back to list</a>
+  <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position pb_margin"><a href="{{ path('discussion_index') }}">Retour</a></button>
   </div>
 </div>
 
