--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -66,13 +66,11 @@
       <h3 class="">LE BLOG DES FRUITS ET DES LÉGUMES DE SAISONS</h3>
 
       <div class="row container box_boutons">
-        <span class="col-md-1"></span>
         <a class="btn btn-primary main_button btn-lg col-sm-8 col-md-7 col-lg-3" href="#lienPageFruit" role="button">Fruits & Légumes</a>
-        <span class="col-md-1"></span>
+        <span class="col-md-0 col-lg-1"></span>
         <a class="btn btn-primary main_button btn-lg col-sm-8 col-md-7 col-lg-3" href="#lienPageMois" role="button">Mois & Saisons</a>
-        <span class="col-md-1"></span>
+        <span class="col-md-0 col-lg-1"></span>
         <a class="btn btn-primary main_button btn-lg col-sm-8 col-md-7 col-lg-3" href="#lienPageForum" role="button">Forum</a>
-        <span class="col-md-1"></span>
 
       </div>
     </div>
