--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -17,7 +17,7 @@
     <div class="container col-sm-10 col-md-8 col-lg-6">
     {{ include('user/_form.html.twig') }}
 
-    <a class="btn btn-primary bouton_retour" href="{{ path('user_index') }}">Back to list</a>
+    <button class="btn btn-md btn-primary bouton_CreerDiscussion bouton_admin_position pb_margin"><a href="{{ path('user_index') }}">Retour</a></button>
     </div>
 </div>
 
