fixtures USER/PERSON/THEMES

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -193,73 +193,73 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="{{ asset('img/slide-septembre.gif')}}" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Septembre</h5>
+             <h4>Septembre</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-octobre.gif')}}" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Octobre</h5>
+             <h4>Octobre</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-novembre.gif')}}" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Novembre</h5>
+             <h4>Novembre</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-novembre.gif')}}" alt="Fourth slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Decembre</h5>
+             <h4>Décembre</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-janvier.gif')}}" alt="Fifth slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Janvier</h5>
+             <h4>Janvier</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-fevrier.gif')}}" alt="Sixth slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Fevrier</h5>
+             <h4>Février</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-mars.gif')}}" alt="Seventh slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Mars</h5>
+             <h4>Mars</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-avril.gif')}}" alt="Eighth slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Avril</h5>
+             <h4>Avril</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-mai.gif')}}" alt="Nineth slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Mai</h5>
+             <h4>Mai</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-juin.gif')}}" alt="tenth slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Juin</h5>
+             <h4>Juin</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-juillet.gif')}}" alt="Eleventh slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Juillet</h5>
+             <h4>Juillet</h4>
            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/slide-aout.gif')}}" alt="Twelfth slide">
             <div class="carousel-caption d-none d-md-block">
-             <h5>Aout</h5>
+             <h4>Aout</h4>
            </div>
           </div>
         </div>
