--- a/templates/static/eric.html.twig
+++ b/templates/static/eric.html.twig
@@ -16,7 +16,7 @@
 <h1>Merci Eric !!</h1>
 <h3>Surprise</h3>
 <div class="container col-sm-8 col-md-8 col-lg-6">
-<p>Eh oui, même pour te faire une surprise on a eu besoin de ton aide mais tu n'as rien vu venir !! #QuichesForEver</p>
+<p>Eh oui, même pour te faire une surprise on a eu besoin de ton aide mais bon avoues t'as rien vu venir !! #QuichesForEver</p>
 <br>
 <p>Merci pour ta patience (parce qu'avec nous deux il y en avait bien besoin), ta bonne humeur, ta gentillesse, ta disponibilité et merci pour tous les debug !!</p>
 <br>
